Complete the application full flow

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,8 @@ gui_scripts =
 
 [options.package_data]
 NetGuardian =
-    main_page.glde
+    main_page.glade
+    dataset_selection_page.glade
+    features_selection_page.glade
+    page_template.glade
     
